Fix concurrency issues with logger and screen